# tigercli

./: .gitignore  LICENSE.md  README.md  build.bat  build.ps1  build.sh  github.sh  pyproject.toml
.agents/: reviewer.md
.skills/code-review/: SKILL.md
docs/: cli.md  configuration.md  getting-started.md  project-files.md  providers.md  server.md  sessions.md  subagents-and-skills.md  token-saving.md  troubleshooting.md  tui.md
tigercli/: __init__.py  client.py  config.py  db.py  main.py  prompt.py
tigercli/agent/: loop.py  permissions.py  skills.py  subagents.py  tools.py
tigercli/api/: middleware.py  routes.py  sse.py
tigercli/common/: bash_timeout.py  cache.py  debug_logger.py  error_logger.py  file_utils.py  message_converter.py  model_capabilities.py  notify.py  openai_client.py  process_tree.py  settings.py  shell_utils.py  state.py  telemetry.py  thinking.py  validate.py
tigercli/session/: compact.py  file_history.py  messages.py  models.py  store.py
tigercli/static/css/: tiger.css
tigercli/static/js/: app.js  diff.js
tigercli/templates/: index.html  layout.html  modal_permission.html  settings.html  sidebar.html  status.html
tigercli/tools/: websearch.py
tigercli/tui/: __init__.py  bridge.py
tui-ts/: package-lock.json  package.json  tsconfig.json
tui-ts/src/: clipboard.ts  index.tsx  types.d.ts
