[project]
name = "tigerlitecode"
version = "0.1.0"
description = "TigerLiteCode — TUI-first CLI coding agent for DeepSeek & OpenCode. Session-aware, server-side cached."
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
readme = "README.md"
dependencies = [
    "openai>=1.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "duckduckgo-search>=6.0",
    "rich>=13.0",
    "textual>=1.0.0",
    "pyperclip>=1.8",
]

[project.scripts]
tigerlitecode = "tigercli.main:main"
tigercli = "tigercli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tigercli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
